Command Pattern Complete !!

--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -121,7 +121,7 @@ div#footer{
 }
 .bgColorYellow{background-color: #ffff00}
 .center{margin: 0 auto}
-.width100px{width:100%}
+.width100pt{width:100%}
 .width90pt{width:90%}
 .width80pt{width:80%}
 .fontColorBlue{color:blue}
@@ -134,6 +134,7 @@ div#footer{
 .marginBot50px{margin-bottom: 50px}
 .width300px{width:300px}
 .floatRight{float:right;}
+
 
 /* table,th,td{border:1px solid gray}
 .width-60pt{width:60%}
